angk8s/angular-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: angular
  ports:
    - port: 4200
      targetPort: 4200
