angk8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterPort
  selector:
    component: backend
  ports:
  - port: 8080
    targetPort: 8080
