angk8s/nginx-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32000
