angk8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: backend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31500
